--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/AndriiZil/gitops-argocd.git
     targetRevision: HEAD
-    path: gitops
+    path: gitops/apps
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
