--- a/gitops/apps/frontend-app.yaml
+++ b/gitops/apps/frontend-app.yaml
@@ -11,7 +11,7 @@ spec:
     path: project/frontend-app/k8s
   destination:
     server: https://kubernetes.default.svc
-    namespace: frontend
+    namespace: default
   syncPolicy:
     automated:
       prune: true
